--- a/brentlab_straindb/requirements.txt
+++ b/brentlab_straindb/requirements.txt
@@ -1,37 +1,65 @@
-# Core
-pytz==2022.6
+asgiref==3.5.2
+asttokens==2.2.1
+backcall==0.2.0
+blessings==1.7
+boto3==1.26.23
+botocore==1.29.25
+click==8.1.3
+coverage==6.5.0
+decorator==5.1.1
+dj-database-url==1.0.0
 Django==4.1.4
 django-configurations==2.4
-gunicorn==20.1.0
-newrelic==8.4.0
-
-# For the persistence stores
-psycopg2-binary==2.9.5
-dj-database-url==1.0.0
-
-# Model Tools
-django-model-utils==4.3.1
-django_unique_upload==0.2.1
-
-# Rest apis
-djangorestframework==3.14.0
-Markdown==3.4.1
 django-filter==22.1
-
-# Developer Tools
+django-model-utils==4.3.1
+django-nose==1.4.7
+django-storages==1.13.1
+django-unique-upload==0.2.1
+djangorestframework==3.14.0
+executing==1.2.0
+factory-boy==3.2.1
+Faker==15.3.4
+flake8==6.0.0
+ghp-import==2.1.0
+gunicorn==20.1.0
+importlib-metadata==5.1.0
 ipdb==0.13.9
 ipython==8.7.0
-mkdocs==1.4.2
-flake8==6.0.0
-
-# Testing
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mergedeep==1.3.4
+mkdocs==1.3.0
 mock==4.0.3
-factory-boy==3.2.1
-django-nose==1.4.7
+newrelic==8.4.0
+nose==1.3.7
 nose-progressive==1.5.2
-coverage==6.5.0
-
-# Static and Media Storage
-django-storages==1.13.1
-boto3==1.26.23
-
+packaging==22.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.36
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.10.0
+pyflakes==3.0.1
+Pygments==2.13.0
+python-dateutil==2.8.2
+pytz==2022.6
+PyYAML==6.0
+pyyaml_env_tag==0.1
+s3transfer==0.6.0
+six==1.16.0
+sqlparse==0.4.3
+stack-data==0.6.2
+toml==0.10.2
+traitlets==5.6.0
+urllib3==1.26.13
+watchdog==2.2.0
+wcwidth==0.2.5
+zipp==3.11.0
